mType/tests/testFiles/error/error/scopeFunctionParameterShadowing.mt
int x = 10;
function test(int x): int {
    int x = 20;
    return x;
}